--- a/Tasks/Task_4/app/src/main/res/values/colors.xml
+++ b/Tasks/Task_4/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1565C0</color>
-    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#B71C1C</color>
     <color name="colorAccent">#00BCD4</color>
 
+    <color name="black">#000</color>
     <style name="MyTextViewStyle" >
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#00FF00</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#fff</item>
         <item name="android:typeface">monospace</item>
     </style>
 </resources>
