--- a/Tasks/Task_17/app/src/main/res/layout/activity_main.xml
+++ b/Tasks/Task_17/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:textColor="@color/colorAccent"
         android:textAlignment="center"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MyTextViewStyle"
+        android:text="@string/about_me"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
