--- a/Tasks/Task_17/app/src/main/res/values/styles.xml
+++ b/Tasks/Task_17/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyTextViewStyle" >
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
