--- a/Tasks/Task_18/app/src/main/res/layout/activity_task_18.xml
+++ b/Tasks/Task_18/app/src/main/res/layout/activity_task_18.xml
@@ -24,4 +24,12 @@
         android:layout_gravity="center_horizontal">
     </android.gesture.GestureOverlayView>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MyTextViewStyle"
+        android:text="@string/about_me"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
